update the JS